# yuzu

./: .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Create  Debug  Emulator  FR-Vulkan-Supported-Games  Function  README.md  appveyor.yml  query_cache.h  vcpkg.json
src/core/: CMakeLists.txt  api_version.h  core.cpp  core.h  core_cpu.cpp  core_cpu.h  core_manager.cpp  core_timing.cpp  core_timing.h  cpu_core_manager.cpp  cpu_manager.cpp  cpu_manager.h  device_memory.cpp  device_memory.h  memory.cpp  memory.h  perf_stats.cpp  perf_stats.h  precompiled_headers.h  reporter.cpp  reporter.h  settings.cpp  settings.h  telemetry_session.cpp
src/core/arm/: arm_interface.cpp  arm_interface.h  exclusive_monitor.cpp
src/core/crypto/: aes_util.h  aes_util_mbedtls.cpp  aes_util_openssl.cpp  crypto.h  crypto_mbedtls.cpp  crypto_openssl.cpp  key_manager.cpp  key_manager.h  partition_data_manager.cpp
src/core/debugger/: debugger.cpp  gdbstub.cpp  gdbstub_arch.cpp
src/core/file_sys/: bis_factory.cpp  bis_factory.h  card_image.cpp  card_image.h  content_archive.cpp  content_archive.h  control_metadata.cpp  control_metadata.h  errors.h  filesystem.h  fs_common.h  fs_program_index_map_info.h  fs_save_data_types.h  fsmitm_romfsbuild.cpp  fsmitm_romfsbuild.h  ips_layer.cpp  mode.h  nca_metadata.cpp  nca_metadata.h  nca_patch.cpp  partition_filesystem.cpp  partition_filesystem.h  patch_manager.cpp  patch_manager.h  program_metadata.cpp  program_metadata.h  registered_cache.cpp  registered_cache.h  romfs.cpp  romfs_factory.cpp  romfs_factory.h  romfs_filesystem.h  savedata_factory.cpp  savedata_factory.h  sdmc_factory.cpp  sdmc_factory.h  submission_package.cpp  submission_package.h  vfs.cpp  vfs.h  (+9 more)
src/core/frontend/: emu_window.cpp  emu_window.h  framebuffer_layout.cpp  framebuffer_layout.h
src/core/gdbstub/: gdbstub.cpp  gdbstub.h
src/core/hid/: emulated_console.h  emulated_controller.cpp  emulated_controller.h  emulated_devices.h  hid_core.cpp  hid_core.h  input_interpreter.cpp  motion_input.cpp
src/core/hle/: api_version.h  ipc.h  ipc_helpers.h  result.h
src/core/internal_network/: network_interface.cpp
src/core/loader/: deconstructed_rom_directory.cpp  deconstructed_rom_directory.h  elf.cpp  elf.h  kip.cpp  linker.cpp  loader.cpp  loader.h  nax.cpp  nca.cpp  nca.h  nro.cpp  nro.h  nso.cpp  nso.h  nsp.cpp  xc.h  xci.cpp  xci.h
src/core/memory/: cheat_engine.cpp  dmnt_cheat_types.h  dmnt_cheat_vm.cpp  dmnt_cheat_vm.h
src/core/network/: network.cpp  network.h  network_interface.cpp
src/core/tools/: freezer.h
src/kernel/: CMakeLists.txt  code_set.cpp  code_set.h  global_scheduler_context.cpp  global_scheduler_context.h  initial_process.h  k_address_arbiter.cpp  k_address_arbiter.h  k_address_space_info.cpp  k_auto_object.cpp  k_auto_object.h  k_auto_object_container.cpp  k_auto_object_container.h  k_capabilities.cpp  k_capabilities.h  k_class_token.cpp  k_client_port.cpp  k_client_port.h  k_client_session.cpp  k_client_session.h  k_code_memory.cpp  k_code_memory.h  k_condition_variable.cpp  k_condition_variable.h  k_debug.h  k_device_address_space.cpp  k_device_address_space.h  k_dynamic_page_manager.h  k_dynamic_resource_manager.h  k_dynamic_slab_heap.h  k_event.cpp  k_event.h  k_event_info.h  k_handle_table.cpp  k_handle_table.h  k_hardware_timer.cpp  k_hardware_timer.h  k_hardware_timer_base.h  k_interrupt_manager.cpp  k_light_condition_variable.cpp  (+78 more)
src/kernel/init/: init_slab_setup.cpp
src/kernel/svc/: svc_activity.cpp  svc_address_arbiter.cpp  svc_address_translation.cpp  svc_cache.cpp  svc_code_memory.cpp  svc_condition_variable.cpp  svc_debug.cpp  svc_debug_string.cpp  svc_device_address_space.cpp  svc_event.cpp  svc_exception.cpp  svc_info.cpp  svc_insecure_memory.cpp  svc_interrupt_event.cpp  svc_io_pool.cpp  svc_ipc.cpp  svc_kernel_debug.cpp  svc_light_ipc.cpp  svc_lock.cpp  svc_memory.cpp  svc_physical_memory.cpp  svc_port.cpp  svc_power_management.cpp  svc_process.cpp  svc_process_memory.cpp  svc_processor.cpp  svc_query_memory.cpp  svc_register.cpp  svc_resource_limit.cpp  svc_secure_monitor_call.cpp  svc_session.cpp  svc_shared_memory.cpp  svc_synchronization.cpp  svc_thread.cpp  svc_thread_profiler.cpp  svc_tick.cpp  svc_transfer_memory.cpp
src/service/: CMakeLists.txt  hle_ipc.cpp  hle_ipc.h  ipc_helpers.h  kernel_helpers.cpp  kernel_helpers.h  mutex.cpp  server_manager.cpp  server_manager.h  service.cpp  service.h
src/service/acc/: acc.cpp  acc.h  acc_aa.cpp  acc_aa.h  acc_su.cpp  acc_su.h  acc_u0.cpp  acc_u0.h  acc_u1.cpp  acc_u1.h  async_context.cpp  async_context.h  errors.h  profile_manager.cpp  profile_manager.h
src/service/am/: am.cpp  am.h  applet_ae.cpp  applet_ae.h  applet_oe.cpp  applet_oe.h  idle.cpp  idle.h  omm.cpp  omm.h  spsm.cpp  spsm.h
src/service/aoc/: aoc_u.cpp  aoc_u.h
src/service/apm/: apm.cpp  apm_controller.cpp  apm_interface.cpp  apm_interface.h
src/service/audio/: audctl.cpp  audctl.h  audin_u.cpp  audin_u.h  audio.cpp  audout_u.cpp  audout_u.h  audrec_a.cpp  audrec_a.h  audrec_u.cpp  audrec_u.h  audren_u.cpp  audren_u.h  errors.h  hwopus.cpp  hwopus.h
src/service/bcat/: bcat.cpp  bcat.h  bcat_module.cpp  bcat_module.h
src/service/bpc/: bpc.cpp
src/service/btdrv/: btdrv.cpp
src/service/btm/: btm.cpp
src/service/caps/: caps.cpp  caps_a.cpp  caps_a.h  caps_c.cpp  caps_c.h  caps_manager.cpp  caps_manager.h  caps_result.h  caps_sc.cpp  caps_sc.h  caps_ss.cpp  caps_ss.h  caps_su.cpp  caps_su.h  caps_u.cpp  caps_u.h
src/service/erpt/: erpt.cpp
src/service/es/: es.cpp
src/service/eupld/: eupld.cpp
src/service/fatal/: fatal.cpp  fatal.h  fatal_p.cpp  fatal_p.h  fatal_u.cpp  fatal_u.h
src/service/fgm/: fgm.cpp
src/service/filesystem/: filesystem.cpp  filesystem.h  fsp_ldr.cpp  fsp_ldr.h  fsp_pr.cpp  fsp_pr.h  fsp_srv.cpp  fsp_srv.h
src/service/friend/: friend.cpp  friend.h  friend_interface.cpp  friend_interface.h
src/service/glue/: arp.cpp  arp.h  bgtc.cpp  bgtc.h  ectx.cpp  ectx.h  errors.h  glue.cpp  glue_manager.cpp  glue_manager.h  notif.cpp  notif.h
src/service/grc/: grc.cpp
(+1554 files in other folders)
